@@ -286,9 +286,9 @@
                 <!-- 部署实例的数组下标个数-->
                 <deploy.admin.jvm-args>
                     <![CDATA[
-                    -server -Xms30g -Xmx30g -Xmn17g -XX:MaxPermSize=2g -Xverify:none\
-					-Xss16m -XX:+UseParallelGC -XX:MaxTenuringThreshold=6  -XX:+UseParallelOldGC -XX:+UseAdaptiveSizePolicy -XX:MaxGCPauseMillis=100 -XX:ParallelGCThreads=24\
-					-XX:+UseTLAB -XX:TLABSize=1g -XX:+ResizeTLAB -XX:+PrintTLAB -verbose\
+                    -server -Xms4g -Xmx4g -Xmn2g -XX:MaxPermSize=64m -Xverify:none\
+					-Xss1m -XX:+UseParallelGC -XX:MaxTenuringThreshold=6  -XX:+UseParallelOldGC -XX:+UseAdaptiveSizePolicy -XX:MaxGCPauseMillis=100 -XX:ParallelGCThreads=24\
+					-XX:+UseTLAB -XX:TLABSize=1g -XX:+ResizeTLAB -XX:+PrintTLAB -verbose -XX:+PrintGCApplicationStoppedTime\
 					 -XX:+PrintGCApplicationStoppedTime -XX:+PrintFlagsFinal -Xloggc:/letv/logs/mms/transmission-gc.log
                   ]]>
                 </deploy.admin.jvm-args>
